--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^12.26.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
